--- a/main.html
+++ b/main.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <style>
+        body{
+            background-color: brown;
+        }
+    </style>
 </head>
-<body background-color="red">
+<body>
     
 </body>
 </html>
