--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>SALO</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
+  <title>SALO</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div class="header">
-        <div class="button">Головна</div>
-        <div class="button">Проєкти</div>
-        <div class="button">Про мене</div>
-    </div>
+  <header>
+    <div class="logo">SALO</div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <main>
+    <h1>Welcome to the Home Page!</h1>
+    <!-- Add content for the home page here -->
+  </main>
 </body>
 </html>
